src/VisitList/VisitList.css
.visitcontainer {
  background-color: #262b39;
  width: 281px;
  padding-bottom: 50px;
  overflow: hidden;
  overflow-y: scroll;
  height: 300px;
}
.nomo {
  font-family: 'Roboto', sans-serif;
  font-size: 13px;
  color: white;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  padding-left: 72px;
  padding-top: 25px;
}

/* полоса прокрутки (скроллбар) */
::-webkit-scrollbar {
  width: 4px; /* ширина для вертикального скролла */
  height: 4px; /* высота для горизонтального скролла */
}

/* ползунок скроллбара */
::-webkit-scrollbar-thumb {
  background-color: #3f3f4b;
  border-radius: 9em;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #253861;
}

/* Стрелки */

::-webkit-scrollbar-button:vertical:start:decrement {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-button:vertical:end:increment {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-button:horizontal:start:decrement {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-button:horizontal:end:increment {
  width: 0px;
  height: 0px;
}

